Closed Bug 11410 Opened 25 years ago Closed 25 years ago

Assertion: "HTTPChannel is null."

Categories

(Core :: Networking, defect, P3)

x86
Linux
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: akkzilla, Assigned: rpotts)

References

()

Details

(Whiteboard: asked reporter)

If I load the given URL on linux using a build from Friday afternoon 8/6, I get
several:
Assertion: "HTTPChannel is null." (m_pConnection) at file
nsHTTPResponseListener.cpp, line 64

and if I let apprunner sit pointing at that page, every so often I get another
one of these assertions.
Summary: Assertion: "HTTPChannel is null." → Assertion: "HTTPChannel is null."
Still seeing this Monday.  Possibly related: if I exit the browser by clicking
on the windowmanager dismiss button (since File->Exit doesn't work today), I get
the assertion:
Assertion: "listeners not removed or notified" (mListeners->GetSize() == 0) at
file nsServiceManager.cpp, line 52

Could this be a timing problem, like the listeners get created too soon or too
late?
Assignee: gagan → rpotts
Guessing rpotts since it looks like he's the nsHTTPChannel guy.
*** Bug 11515 has been marked as a duplicate of this bug. ***
Target Milestone: M9
*** Bug 11599 has been marked as a duplicate of this bug. ***
CC-ing kipp, since he posted to mozilla.builds about this.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Oops...  I've fixed the NS_ASSERTION in the constructor for
nsHTTPResponseListener.cpp.

It was a cut n' paste error...  I've changed the NS_ASSERTION to check for
aConnection not being null.
Whiteboard: asked reporter
akkana, does it look good now? if so please mark verified thanks
Status: RESOLVED → VERIFIED
Yes, the assert is now gone.
Bulk move of all Necko (to be deleted component) bugs to new Networking

component.
You need to log in before you can comment on or make changes to this bug.