Bug #11410.  Changed NS_ASSERTION to checkc the *correct* variable.  Someday I'll grow a brain and become really dangerous...